Modifi pour mettre a joure

--- a/templates/demarche_env_atelier_generated.tex
+++ b/templates/demarche_env_atelier_generated.tex
@@ -3,11 +3,12 @@
 % Texte exact de la base de données
 % ============================================
 
+\newpage
 \subsection{DÉMARCHE ENVIRONNEMENTALE : ATELIER \& BUREAUX}
 
 \begin{tcolorbox}[
     enhanced,
-    colback=ecoFond,
+    colback=white,
     colframe=ecoVert,
     fonttitle=\bfseries\large,
     coltitle=white,
@@ -71,7 +72,7 @@ Cette double démarche (déchets/empreinte énergétique) s'applique dans tous l
 % ---- IMAGE ACTION CONCRETE ----
 \begin{tcolorbox}[
     enhanced,
-    colback=ecoFond,
+    colback=white,
     colframe=ecoVert,
     fonttitle=\bfseries,
     coltitle=white,
@@ -104,7 +105,7 @@ Cette double démarche (déchets/empreinte énergétique) s'applique dans tous l
     left=8pt, right=8pt, top=8pt, bottom=8pt
 ]
 
-Dans sa démarche écologique, Bois \& Techniques trie aujourd'hui ses déchets à la source grâce à des poubelles de tri et des bennes sélectives. Permettant leur traitement selon leur nature et leur destination.
+Dans sa démarche écologique, Bois \& Techniques trie aujourd'hui ses déchets à la source grâce à des poubelles de tri et des bennes sélectives. Permettant leur traitement selon leur nature et leur destination. Cette sensibilisation est inscrite dans le LIVRET D'ACCUEIL.
 
 \vspace{0.4cm}
 
@@ -112,7 +113,7 @@ Dans sa démarche écologique, Bois \& Techniques trie aujourd'hui ses déchets 
 
     \item Benne pour : bois sains, lattes, chutes de poutres, volige, cartons non souillés : utilisé comme moyen de chauffage de l'atelier interne.
 
-    \item Benne pour déchets bois traités et bois peint évacuation vers um centre de traitement \underline{SCHROLL}.
+    \item Benne pour déchets bois traités et bois peint évacuation vers un centre de traitement \underline{SCHROLL}.
 
     \item Lieu de stockage pour déchets industriels spéciaux : Les mastics, silicones, colles, pots de peinture et Epoxy, mousse Polyuréthane expansée, contenants souillés, graisse, chiffons, et autres déchets. stocké dans un local avec cuve de rétention. Puis évacuation et traitement chez TREDI ou déchetterie de la commune de SOULTZ.
 
