--- a/templates/demarche_env_chantiers_generated.tex
+++ b/templates/demarche_env_chantiers_generated.tex
@@ -3,11 +3,12 @@
 % Texte exact de la base de données
 % ============================================
 
+\newpage
 \subsection{DÉMARCHE ENVIRONNEMENTALE : SUR LES CHANTIERS}
 
 \begin{tcolorbox}[
     enhanced,
-    colback=ecoFond,
+    colback=white,
     colframe=ecoVert,
     fonttitle=\bfseries\large,
     coltitle=white,
@@ -129,7 +130,7 @@ Notre activité en construction neuve ne génère presque pas de déchet sur cha
 % ---- IMAGE ORGANISATION ----
 \begin{tcolorbox}[
     enhanced,
-    colback=ecoFond,
+    colback=white,
     colframe=ecoVert,
     fonttitle=\bfseries,
     coltitle=white,
