--- a/templates/demarche_hqe_generated.tex
+++ b/templates/demarche_hqe_generated.tex
@@ -2,22 +2,22 @@
 % DEMARCHE HQE - Texte exact de la base de données
 % ============================================
 
-\subsection{DÉMARCHE HQE}
+% Supprimé: \subsection car c'est maintenant inclus dans une section principale
 
 \begin{tcolorbox}[
     enhanced,
-    colback=ecoFond,
+    colback=white,
     colframe=ecoVert,
     fonttitle=\bfseries\large,
     coltitle=white,
-    title={\faLeaf\hspace{0.5em}Hygiène qualité environnement sécurité},
+    title={\faLeaf\hspace{0.5em}Qualité Sécurité Environnement},
     colbacktitle=ecoVertFonce,
     rounded corners,
     boxrule=2pt,
     left=8pt, right=8pt, top=8pt, bottom=8pt
 ]
 
-Nous sommes labélisés RGE : Notre démarche HQE (Haute qualité environnementale) tend à offrir des ouvrages sains et confortables dont les impacts sur l'environnement, évalués sur l'ensemble du cycle de vie, sont les plus maîtrisés possibles. C'est une démarche d'optimisation multicritères qui s'appuie sur une donnée fondamentale : tout bâtiment doit avant tout répondre à un usage et assurer un cadre de vie adéquat à ses utilisateurs. Comme l'atteste nos efforts réalisés dans le choix de nos fournisseurs, nos matériaux, la gestion de nos déchets et leurs retraitements, la société Bois \& Techniques agis concrètement pour améliorer la qualité environnementale de nos constructions neuves et des bâti existant.
+Notre démarche QSE (Qualité Sécurité Environnement) tend à offrir des ouvrages sains et confortables dont les impacts sur l'environnement, évalués sur l'ensemble du cycle de vie, sont les plus maîtrisés possibles. C'est une démarche d'optimisation multicritères qui s'appuie sur une donnée fondamentale : tout bâtiment doit avant tout répondre à un usage et assurer un cadre de vie adéquat à ses utilisateurs. Comme l'atteste nos efforts réalisés dans le choix de nos fournisseurs, nos matériaux, la gestion de nos déchets et leurs retraitements, la société Bois \& Techniques agis concrètement pour améliorer la qualité environnementale de nos constructions neuves et des bâti existant.
 
 \end{tcolorbox}
 
@@ -227,7 +227,7 @@ L'amélioration acoustique est prise en compte dans nos conceptions de structure
 ]
 
 
-\textbf{Cible n°14 « qualité de l'air »}
+\textbf{\textcolor{ecoRouge}Cible n°14 « qualité de l'air »}
 
 \vspace{0.2cm}
 
