--- a/templates/matiere_premiere_generated.tex
+++ b/templates/matiere_premiere_generated.tex
@@ -78,7 +78,7 @@ Matériaux testés en laboratoire et l'ensemble de nos panneaux OSB sont de clas
 % Encadré santé
 \begin{tcolorbox}[
     enhanced,
-    colback=ecoFond,
+    colback=white,
     colframe=ecoRouge,
     fonttitle=\bfseries,
     coltitle=white,
