--- a/templates/moyens_materiel_generated.tex
+++ b/templates/moyens_materiel_generated.tex
@@ -2,17 +2,6 @@
 % MOYENS MATERIEL AFFECTES AU PROJET
 % ============================================
 
-\begin{tcolorbox}[
-    enhanced, colback=ecoFond, colframe=ecoBleu, fonttitle=\bfseries, coltitle=white,
-    title={\faIcon{tools}\hspace{0.3em}Un parc machines récent, certifié et entretenu},
-    colbacktitle=ecoBleu, rounded corners, boxrule=1.5pt, left=6pt, right=6pt, top=4pt, bottom=4pt
-]
-\small
-L'entreprise Bois \& Techniques dispose d'un parc matériel complet et régulièrement entretenu, permettant d'assurer la qualité et la sécurité de nos interventions.
-\end{tcolorbox}
-
-\vspace{0.4cm}
-
 % Conception
 \begin{tcolorbox}[
     enhanced, colback=white, colframe=ecoBleu, fonttitle=\bfseries\footnotesize, coltitle=white,
@@ -21,9 +10,10 @@ L'entreprise Bois \& Techniques dispose d'un parc matériel complet et réguliè
 ]
 \footnotesize
 \begin{itemize}[leftmargin=*, itemsep=1pt, topsep=2pt]
-    \item Utilisation d'un scan laser 3D pour le relevé des cotes, des altimétries, de l'implantation et du traçage.
+    \item Lunette et laser pour relevés, implantation et traçage
     \item Panel de logiciel (CAO, DAO, calcul de structure, …)
     \item Purge complémentaire
+    \item Scan laser 3D pour relever côtes, altimétrie, implantation et traçage.
     \item Relevé sur site de l’état sanitaire des pièces conservées.
     \item Plans 3D et 2D (Plans P.A.C).
     
@@ -34,9 +24,9 @@ L'entreprise Bois \& Techniques dispose d'un parc matériel complet et réguliè
 
 % Securite (Rouge)
 \begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoRouge, fonttitle=\bfseries\footnotesize, coltitle=white,
+    enhanced, colback=white, colframe=red!70!black, fonttitle=\bfseries\footnotesize, coltitle=white,
     title={\faIcon{hard-hat}\hspace{0.2em}Sécurité},
-    colbacktitle=ecoRouge, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+    colbacktitle=red!70!black, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
 ]
 \footnotesize
 \begin{itemize}[leftmargin=*, itemsep=1pt, topsep=2pt]
