--- a/templates/securite_sante_generated.tex
+++ b/templates/securite_sante_generated.tex
@@ -3,43 +3,12 @@
 % ============================================
 
 \begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoBleu, fonttitle=\bfseries\small, coltitle=white,
-    title={\faIcon{cog}\hspace{0.2em}Organisation de production},    colbacktitle=ecoBleu, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+    enhanced, colback=white, colframe=ecoMarron, fonttitle=\bfseries\small, coltitle=white,
+    title={\faIcon{cog}\hspace{0.2em}Organisation de production},    colbacktitle=ecoMarron, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
 ]
 \footnotesize
 
-Notre atelier est organisé de façon lean management en privilegiant l'efficience afin de faciliter la circulation des pièces de bois au cours des différentes phases de travail. Les zones de stockage, de traçage, d'usinage et de stockage avant expédition sont prévues.
-
-\end{tcolorbox}
-
-\vspace{0.4cm}
-
-\begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoBleu, fonttitle=\bfseries\small, coltitle=white,
-    title={\faIcon{user-plus}\hspace{0.2em}Accueil des nouveaux salariés},
-    colbacktitle=ecoBleu, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
-]
-\footnotesize
-Chaque nouvel arrivant (stagiaire, intérimaire, salarié) se voit fournir, dès son arrivée, un livret d'accueil rappelant les bases de sécurité et les bons comportements à avoir (OPP BTP), une « fiche d'accueil » est rédigée avec lui, afin de faciliter son suivi médical en cas d'accident et de le sensibiliser aux dangers du chantier et les types d'EPI mis à sa disposition.
-\end{tcolorbox}
-
-\vspace{0.4cm}
-
-\begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoBleu, fonttitle=\bfseries\small, coltitle=white,
-    title={\faIcon{certificate}\hspace{0.2em}Habilitations et compétences réglementaires},    colbacktitle=ecoBleu, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
-]
-\footnotesize
-
-L'ensemble du personnel intervenant sur les chantiers dispose des habilitations et certifications réglementaires nécessaires à l'exécution des travaux en toute sécurité. Les équipes sont régulièrement formées et maintenues à niveau afin de garantir la conformité aux exigences en vigueur et la maîtrise des risques liés aux interventions.
-
-À ce titre, les opérateurs sont notamment titulaires des habilitations suivantes :
-\begin{itemize}[leftmargin=1.5em, itemsep=2pt]
-    \item CACES Levage
-    \item CACES Conduite de pont roulant
-    \item CACES Nacelle
-    \item SST (Sauveteur Secouriste du Travail)
-\end{itemize}
+Notre atelier est organisé de façon lean management en privilégiant l'efficience afin de faciliter la circulation des pièces de bois au cours des différentes phases de travail. Les zones de stockage, de traçage, d'usinage et de stockage avant expédition sont prévues.
 
 \end{tcolorbox}
 
@@ -58,9 +27,36 @@ Que ce soit en atelier ou sur chantier, nous mettons à la disposition de notre 
 \vspace{0.4cm}
 
 \begin{tcolorbox}[
-    enhanced, colback=ecoFond, colframe=ecoRouge, fonttitle=\bfseries, coltitle=white,
+    enhanced, colback=white, colframe=ecoBleu, fonttitle=\bfseries\small, coltitle=white,
+    title={\faIcon{user-plus}\hspace{0.2em}Accueil des nouveaux salariés},
+    colbacktitle=ecoBleu, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+]
+\footnotesize
+Chaque nouvel arrivant (stagiaire, intérimaire, salarié) se voit fournir, dès son arrivée, un livret d'accueil rappelant les bases de sécurité et les bons comportements à avoir (OPP BTP), une « fiche d'accueil » est rédigée avec lui, afin de faciliter son suivi médical en cas d'accident et de le sensibiliser aux dangers du chantier et les types d'EPI mis à sa disposition.
+\end{tcolorbox}
+
+\vspace{0.4cm}
+
+\begin{tcolorbox}[
+    enhanced, colback=white, colframe=ecoVert, fonttitle=\bfseries\small, coltitle=white,
+    title={\faIcon{certificate}\hspace{0.2em}Habilitations de nos équipes},
+    colbacktitle=ecoVert, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+]
+\footnotesize
+\begin{itemize}[leftmargin=*, itemsep=0pt, parsep=0pt, topsep=0pt]
+    \item CACES Levage
+    \item CACES Conduite de pont roulant
+    \item CACES Nacelle
+    \item SSTT (Sauveteur Secouriste du Travail)
+\end{itemize}
+\end{tcolorbox}
+
+\vspace{0.4cm}
+
+\begin{tcolorbox}[
+    enhanced, colback=white, colframe=red!70!black, fonttitle=\bfseries, coltitle=white,
     title={\faIcon{shield-alt}\hspace{0.3em}Sécurité et santé sur les chantiers},
-    colbacktitle=ecoRouge, rounded corners, boxrule=1.5pt, left=5pt, right=5pt, top=4pt, bottom=4pt
+    colbacktitle=red!70!black, rounded corners, boxrule=1.5pt, left=5pt, right=5pt, top=4pt, bottom=4pt
 ]
 \small
 Afin d'offrir des garanties de sécurité au public et nos salariés, notre atelier, \textbf{construit en 2010}, respecte l'ensemble des normes de construction et de prévention/lutte/accès incendie et explosion. Nos équipes ont à leur disposition les moyens de travailler en sécurité tout en préservant leur santé. Ils participent régulièrement à des formations sur les bonnes pratiques sécuritaires et le bon usage de nos machines (tailles et levages).
@@ -69,8 +65,8 @@ Afin d'offrir des garanties de sécurité au public et nos salariés, notre atel
 \vspace{0.4cm}
 
 \begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoRouge, fonttitle=\bfseries\small, coltitle=white,
-    title={\faIcon{tasks}\hspace{0.2em}Concrètement},    colbacktitle=ecoRouge, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+    enhanced, colback=white, colframe=red!70!black, fonttitle=\bfseries\small, coltitle=white,
+    title={\faIcon{tasks}\hspace{0.2em}Concrètement},    colbacktitle=red!70!black, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
 ]
 \footnotesize
 
@@ -89,24 +85,22 @@ Afin d'offrir des garanties de sécurité au public et nos salariés, notre atel
 \vspace{0.4cm}
 
 \begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoRouge, fonttitle=\bfseries\small, coltitle=white,
-    title={\faIcon{check-double}\hspace{0.2em}Vérification périodique},    colbacktitle=ecoRouge, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+    enhanced, colback=white, colframe=red!70!black, fonttitle=\bfseries\small, coltitle=white,
+    title={\faIcon{check-double}\hspace{0.2em}Vérification périodique},    colbacktitle=red!70!black, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
 ]
 \footnotesize
 
-Échelles, harnais, stop-chute, équipement de levage, ligne de vie, installation électrique, détection incendie, RIA, compresseur, chariot élévateur, extincteur, machine atelier\ldots
+Vérification périodique : Échelles, harnais, stop-chute, équipement de levage, ligne de vie, installation électrique, détection incendie, RIA, compresseur, chariot élévateur, extincteur, machine atelier\ldots
 
 \end{tcolorbox}
 
 \vspace{0.4cm}
 
 \begin{tcolorbox}[
-    enhanced, colback=white, colframe=ecoRouge, fonttitle=\bfseries\small, coltitle=white,
+    enhanced, colback=white, colframe=red!70!black, fonttitle=\bfseries\small, coltitle=white,
     title={\faIcon{exclamation-triangle}\hspace{0.2em}La sécurité s'affiche partout},
-    colbacktitle=ecoRouge, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
+    colbacktitle=red!70!black, rounded corners, boxrule=1pt, left=4pt, right=4pt, top=3pt, bottom=3pt
 ]
 \footnotesize
-De nombreuses affiches issues des organismes de prévention reconnus, tels que l'INRS et l'OPPBTP, sont disposées aux endroits stratégiques de nos bureaux et de notre atelier.
-
-Puisque la pédagogie est l'art de la répétition nous avons privilégié des modèles avec des graphismes et slogan plus ancien pour rappeler à nos charpentiers celle qui se trouvaient déjà autour d'eux dans leur lieu de formation (collège, lycée, CFA,\ldots).
+De nombreuses affiches (INRS et OPP BTP) sont placées aux endroits stratégiques de nos bureaux et atelier. Puisque la pédagogie est l'art de la répétition nous avons privilégié des modèles avec des graphismes et slogan plus ancien pour rappeler à nos charpentiers celle qui se trouvaient déjà autour d'eux dans leur lieu de formation (collège, lycée, CFA,\ldots).
 \end{tcolorbox}
